reworked data_explorer for better configuration and execution

--- a/config/idstools/TestModel.yaml
+++ b/config/idstools/TestModel.yaml
@@ -15,6 +15,35 @@ default:
         index: "instant"
         label: "cnt"
 
+  Exploration_01:
+    data_explorer:
+      DataExplorer:
+        targets: ['Validation_Data', 'Target_Data']
+        pipeline:
+          - explorer: descriptive_analysis
+            config:
+              head: 10
+              tail: 10
+          - explorer: correlation_analysis
+            config:
+              method: "pearson"
+          - explorer: correlation_analysis
+            config:
+              method: "kendall"
+          - explorer: correlation_analysis
+            config:
+              method: "spearman"
+          - explorer: vif_analysis
+          - explorer: missing_values_plot
+          - explorer: correlation_plot
+          - explorer: outlier_plot
+          - explorer: distribution_plot
+          - explorer: scatter_plot
+          - explorer: categorical_plot
+          - explorer: time_series_plot
+          - explorer: over_index_plot
+
+
   Preprocessing:
     data_preparation:
       DataPreparation:
@@ -73,9 +102,30 @@ default:
   Exploration:
     data_explorer:
       DataExplorer:
-        target: 'Validation_Data'
+        targets: ['Validation_Data']
         pipeline:
-          descriptive_analysis: true
+          - explorer: descriptive_analysis
+            config:
+              head: 10
+              tail: 10
+          - explorer: correlation_analysis
+            config:
+              method: "pearson"
+          - explorer: correlation_analysis
+            config:
+              method: "kendall"
+          - explorer: correlation_analysis
+            config:
+              method: "spearman"
+          - explorer: vif_analysis
+          - explorer: missing_values_plot
+          - explorer: correlation_plot
+          - explorer: outlier_plot
+          - explorer: distribution_plot
+          - explorer: scatter_plot
+          - explorer: categorical_plot
+          - explorer: time_series_plot
+          - explorer: over_index_plot
 
   Evaluation:
     model_optimization:
