--- a/config/idstools/TestModel.yaml
+++ b/config/idstools/TestModel.yaml
@@ -94,8 +94,21 @@ default:
                 random_state: 42
             validation:
               targets: ['Target_Data', 'Validation_Data']
+          
           - model: GridSearchCV
             module: sklearn.model_selection
+            config:
+              estimator: RandomForestRegressor
+              param_grid:
+                n_estimators: [100, 200, 300]
+                max_features: ['auto', 'sqrt']
+                max_depth: [10, 20, 30]
+                min_samples_split: [2, 5, 10]
+                min_samples_leaf: [1, 2, 4]
+                bootstrap: [True, False]
+              cv: 5
+              n_jobs: -1
+              verbose: 2
 
           - model: LinearRegression
             module: sklearn.linear_model
@@ -114,4 +127,34 @@ default:
           - model: "models/LinearRegression.pkl"
             validation:
               targets: ['Validation_Data']
-              methods: ['r2_score', 'mae']
+              methods: ['r2_score', 'mae', 'actual_vs_predicted']
+
+  Exploration:
+    data_explorer:
+      DataExplorer:
+        target: 'Validation_Data'
+        targets: ['Validation_Data']
+        pipeline:
+          descriptive_analysis: true
+          - explorer: descriptive_analysis
+            config:
+              head: 10
+              tail: 10
+          - explorer: correlation_analysis
+            config:
+              method: "pearson"
+          - explorer: correlation_analysis
+            config:
+              method: "kendall"
+          - explorer: correlation_analysis
+            config:
+              method: "spearman"
+          - explorer: vif_analysis
+          - explorer: missing_values_plot
+          - explorer: correlation_plot
+          - explorer: outlier_plot
+          - explorer: distribution_plot
+          - explorer: scatter_plot
+          - explorer: categorical_plot
+          - explorer: time_series_plot
+          - explorer: over_index_plot
