--- a/config/idstools/TestModel.yaml
+++ b/config/idstools/TestModel.yaml
@@ -18,10 +18,12 @@ default:
         label: "cnt"
 
   Preprocessing:
-    data_preparation:
+    preparation:
       DataPreparation:
-        targets: ['Target_Data', 'Validation_Data']
+        targets: [Target_Data, Validation_Data]
         pipeline:
+          _StandardScaler:
+            - target: ['temp', 'atemp', 'hum', 'windspeed']
           _CustomTransformer:
             - func: target_to_datetime
               module: "idstools._transformer"
@@ -46,10 +48,6 @@ default:
               module: "idstools._transformer"
               config:
                 target: cnt
-            - func: standard_scaler
-              module: "idstools._transformer"
-              config:
-                label: cnt
           _OneHotEncoder:
             - target: mnth
               config:
@@ -77,84 +75,75 @@ default:
                 errors: "ignore"
 
   Evaluation:
-    model_optimization:
+    optimization:
       ModelOptimization:
-        targets: ['Target_Data', 'Validation_Data']
+        targets: [Target_Data, Validation_Data]
         pipeline:
-          - model: LazyRegressor
+          - id: LazyRegressor
+            targets: [Target_Data]
+            model: LazyRegressor
             module: lazypredict.Supervised
             config:
               verbose: 0
               ignore_warnings: false
               random_state: 42
             split:
-              targets: ['Target_Data']
               config:
                 test_size: 0.2
                 random_state: 42
             validation:
-              targets: ['Target_Data', 'Validation_Data']
-          
-          - model: GridSearchCV
-            module: sklearn.model_selection
-            config:
-              estimator: RandomForestRegressor
-              param_grid:
-                n_estimators: [100, 200, 300]
-                max_features: ['auto', 'sqrt']
-                max_depth: [10, 20, 30]
-                min_samples_split: [2, 5, 10]
-                min_samples_leaf: [1, 2, 4]
-                bootstrap: [True, False]
-              cv: 5
-              n_jobs: -1
-              verbose: 2
+              targets: [Validation_Data]
 
-          - model: LinearRegression
+          - id: LinearRegression
+            targets: [Target_Data]
+            model: LinearRegression
             module: sklearn.linear_model
             config:
               fit_intercept: true
               copy_X: true
               positive: false
             split:
-              targets: ['Target_Data']
               config:
                 test_size: 0.2
                 random_state: 42
             save:
-              path: "models/LinearRegression.pkl"
+              model: "models/LinearRegression.pkl"
+              features: "models/LinearRegression_features.pkl"
 
-          - model: "models/LinearRegression.pkl"
+          - id: FinalModel
+            load:
+              model: "models/LinearRegression.pkl"
+              features: "models/LinearRegression_features.pkl"
             validation:
-              targets: ['Validation_Data']
-              methods: ['r2_score', 'mae', 'actual_vs_predicted']
+              targets: [Validation_Data]
+              methods: [r2_score, mae]
 
-  Exploration:
-    data_explorer:
-      DataExplorer:
-        target: 'Validation_Data'
-        targets: ['Validation_Data']
+  GSOptimization:
+    optimization:
+      GridSearch:
+        targets: [Target_Data]
         pipeline:
-          descriptive_analysis: true
-          - explorer: descriptive_analysis
+          - id: RandomForestRegressor
+            model: RandomForestRegressor
+            module: sklearn.ensemble
+            params_grid:
+              n_estimators: [100, 200, 300]
+              max_depth: [10, 20, 30]
+              min_samples_split: [2, 5, 10]
+              min_samples_leaf: [1, 2, 4]
+              bootstrap: [True, False]
+              random_state: [42]
+          
+          - id: GridSearchCV
+            model: GridSearchCV
+            module: sklearn.model_selection
+            estimators: [RandomForestRegressor]
             config:
-              head: 10
-              tail: 10
-          - explorer: correlation_analysis
-            config:
-              method: "pearson"
-          - explorer: correlation_analysis
-            config:
-              method: "kendall"
-          - explorer: correlation_analysis
-            config:
-              method: "spearman"
-          - explorer: vif_analysis
-          - explorer: missing_values_plot
-          - explorer: correlation_plot
-          - explorer: outlier_plot
-          - explorer: distribution_plot
-          - explorer: scatter_plot
-          - explorer: categorical_plot
-          - explorer: time_series_plot
-          - explorer: over_index_plot
+              cv: 5
+              n_jobs: -1
+              verbose: 2
+              scoring: 'neg_mean_absolute_error'
+            split:
+              config:
+                test_size: 0.2
+                random_state: 42
