--- a/config/idstools/TestModel.yaml
+++ b/config/idstools/TestModel.yaml
@@ -90,6 +90,34 @@ default:
               bootstrap: [True, False]
               random_state: [42]
 
+          - id: XGBRegressor
+            model: XGBRegressor
+            module: xgboost
+            param_grid:
+              n_estimators: [100, 200, 300]
+              max_depth: [3, 4, 5]
+              learning_rate: [0.1, 0.01, 0.001]
+              random_state: [42]
+
+          - id: ExtraTreesRegressor
+            model: ExtraTreesRegressor
+            module: sklearn.ensemble
+            param_grid:
+              n_estimators: [100, 200, 300]
+              max_depth: [10, 20, 30]
+              min_samples_split: [2, 5, 10]
+              min_samples_leaf: [1, 2, 4]
+              bootstrap: [True, False]
+              random_state: [42]
+
+          - id: LinearRegression
+            model: LinearRegression
+            module: sklearn.linear_model
+            param_grid:
+              fit_intercept: [true, false]
+              copy_X: [true, false]
+              positive: [true, false]
+
           - id: LazyRegressor
             targets: [Target_Data]
             model: LazyRegressor
@@ -133,7 +161,7 @@ default:
             targets: [Target_Data]
             model: GridSearchCV
             module: sklearn.model_selection
-            estimators: [RandomForestRegressor]
+            estimators: [RandomForestRegressor, XGBRegressor, ExtraTreesRegressor]
             config:
               cv: 5
               n_jobs: -1
@@ -143,4 +171,4 @@ default:
                 test_size: 0.2
                 random_state: 42
             validation:
-              targets: [Target_Data]
+              targets: [Validation_Data]
