jour fix finished task 2

--- a/config/idstools/Task_2.yaml
+++ b/config/idstools/Task_2.yaml
@@ -49,7 +49,7 @@ preprocessing:
         config:
           strategy: "mean"
     _FeatureDropper:
-      - target: ['casual', 'registered', 'temp', 'dteday']
+      - target: ['casual', 'registered', 'temp', 'hum', 'dteday']
         config:
           axis: 1
           errors: "ignore"
