--- a/config/idstools/Task_2.yaml
+++ b/config/idstools/Task_2.yaml
@@ -26,22 +26,21 @@ preprocessing:
         module: "idstools._transformer"
         config:
           target: casual
+      - func: ensure_numeric
+        module: "idstools._transformer"
     _OneHotEncoder:
       - target: season
         config:
           prefix: season
           dtype: "int"
-          drop_first: true
       - target: weekday
         config:
           prefix: weekday
           dtype: "int"
-          drop_first: true
       - target: weathersit
         config:
           prefix: weathersit
           dtype: "int"
-          drop_first: true
     _NaNDropper:
       - target: ['windspeed']
     _SimpleImputer:
@@ -53,6 +52,8 @@ preprocessing:
         config:
           axis: 1
           errors: "ignore"
+    _StandardScaler:
+      - target: []
 
 optimization:
   pipeline:
